# NovelAI-API

./: .gitignore  README.md  pyproject.toml
.github/workflows/: github-release.yml  pypi-publish.yml
docs/: concurrent_generation.py
docs/examples/: concurrent_generation.py
src/novelai/: __init__.py  __main__.py  client.py  constant.py  consts.py  exceptions.py  image.py  metadata.py  types.py  utils.py
src/novelai/types/: __init__.py  hostinstance.py  image.py  metadata.py  user.py
tests/: example.py  test_calculate_cost.py  test_generate_image.py  test_get_access_token.py  test_init.py
workflows/: github-release.yml  pypi-publish.yml
