[build-system]
requires = ["setuptools>=69", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "novelai"
authors = [
    {name = "UZQueen"},
]
description = "A lightweight async wrapper for NovelAI image generation API"
readme = "README.md"
license = {text = "MIT License"}
keywords = ["API", "async", "NovelAI", "AI", "image generation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.25.2",
    "pydantic>=2.5.3",
    "loguru>=0.7.2",
    "argon2-cffi>=21.3.0",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/HanaokaYuzu/NovelAI-API"
Issues = "https://github.com/HanaokaYuzu/NovelAI-API/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["novelai"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
